[tool.poetry]
name = "agent-veille-auto"
version = "0.1.0"
description = ""
authors = ["IshemZ <ishem.zerzour@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"
numpy = "^2.2.5"
requests = "^2.32.4"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
